tests/functional/lang/eval-fail-short-path-literal.err
error: relative path literal 'test/subdir' should be prefixed with '.' for clarity: './test/subdir' (lint-short-path-literals)
       at /pwd/lang/eval-fail-short-path-literal.nix:1:1:
            1| test/subdir
             | ^
            2|
